# OpenGL

./: .gitignore  .gitmodules  App.cpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  Log.cpp  Log.hpp  README.md  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexBuffer.cpp  VertexBuffer.hpp  Window.cpp  Window.hpp  doit.sh  openGl.sln  openGl.vcxproj  openGl.vcxproj.filters  premake5.lua  stb_image.h
Objects/: Square.cpp  Square.hpp
app/: CMakeLists.txt
app/src/: App.cpp
engine/: CMakeLists.txt
engine/src/: Shader.cpp  Window.cpp
res/shaders/fragment/: basic.glsl  fragment_basic.glsl
res/shaders/vertex/: basic.glsl
